# pdf-to-xml-unicoded-font

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: README.md  approach.md  blog.md  font-inventory.md  glossary-and-json.md
docs/examples/TI1055-01-001/: TI1055-01-001.patched.txt  TI1055-01-001.raw.txt
docs/examples/TI1751-01-001/: TI1751-01-001.diff.txt  TI1751-01-001.patched.txt  TI1751-01-001.raw.txt
pdf_cmap_fix/: __init__.py  extractor.py
scripts/: build_glyph_db.py  build_reverse_db.py  font_sources.py
tests/: test_build_reverse_db.py  test_helpers.py
tibetan_pdf_fix/: __init__.py  extractor.py
tibetan_pdf_fix/data/: reverse_db.json
