[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-cmap-fix"
version = "0.2.0"
description = "Fix PDF ToUnicode CMaps using GSUB-derived mappings; strong support for Tibetan stacked syllables (Monlam, Himalaya, Jomolhari)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["pdf", "unicode", "tibetan", "fonts", "tounicode", "cmap", "nlp"]
dependencies = [
    "pymupdf>=1.23.0",
    "fonttools>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
pdf-cmap-fix = "pdf_cmap_fix.extractor:main"

[project.urls]
Repository = "https://github.com/OpenPecha/pdf-cmap-fix"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdf_cmap_fix*"]

[tool.setuptools.package-data]
pdf_cmap_fix = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
